--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <!-- The ul tag below creates the navigation bar -->
         <table class="navbar">
             <tr>
-                <th class="navcol"><a href="https://webpages.uncc.edu/cking107/index.html">Home</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/aboutus.html">About us</a></th>
+                <th class="navcol"><a href="http://cleanablind.me/CleanABlind/index.html">Home</a></th>
+                <th><a href="http://cleanablind.me/CleanABlind/aboutus.html">About us</a></th>
                 <th><a href="https://webpages.uncc.edu/cking107/prices.html">Prices</a></th>
                 <th><a href="https://webpages.uncc.edu/cking107/appointment.html">Make an appointment</a></th>
             </tr>
