Changed index again
Changed nav bar hrefs to plain html files

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <!-- The ul tag below creates the navigation bar -->
         <table class="navbar">
             <tr>
-                <th class="navcol"><a href="http://cleanablind.me/CleanABlind/index.html">Home</a></th>
-                <th><a href="http://cleanablind.me/CleanABlind/aboutus.html">About us</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/prices.html">Prices</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/appointment.html">Make an appointment</a></th>
+                <th class="navcol"><a href="index.html">Home</a></th>
+                <th><a href="aboutus.html">About us</a></th>
+                <th><a href="prices.html">Prices</a></th>
             </tr>
         </table>
 
@@ -50,8 +49,7 @@
         <img src="images/BlindMachine.jpeg" id="blindmachine" alt="Picture of the blind machine">
         <p id="paragraph2">At Clean A Blind, we know that our customers can have busy schedules. We provide our
         service as fast as possible and can have your blinds picked up, cleaned, and delivered all in one day.
-        To make an appointment to have your blinds cleaned, click the "Make an appointment" tab at the top of the
-        page. For more information on how to get your blinds cleaned, contact us by visiting the "About us" page
+        For more information on how to get your blinds cleaned, contact us by visiting the "About us" page
         at the top.</p>
 
     </main>
