--- a/aboutus.html
+++ b/aboutus.html
@@ -14,10 +14,9 @@
         <!-- The ul tag below creates the navigation bar -->
         <table class="navbar">
             <tr>
-                <th class="navcol"><a href="https://webpages.uncc.edu/cking107/index.html">Home</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/aboutus.html">About us</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/prices.html">Prices</a></th>
-                <th><a href="https://webpages.uncc.edu/cking107/appointment.html">Make an appointment</a></th>
+                <th class="navcol"><a href="index.html">Home</a></th>
+                <th><a href="aboutus.html">About us</a></th>
+                <th><a href="prices.html">Prices</a></th>
             </tr>
         </table>
 
@@ -35,8 +34,8 @@
             Lewisville, North Carolina. We pick up and deliver blinds to Winston Salem, Greensboro, High Point, and
             surrounding areas. Cleaning blinds isn't easy to do on your
             own. Here at Clean A Blind, we make it simple by using a professional ultrasonic blind cleaning machine to
-            get all of the dirt and residue out of the blinds. The machine makes small vibrations that get into each
-            slat so that every part of the blind is clean.</p>
+            get all of the dirt and residue out of the blinds. The ultrasonic technology effectively cleans all
+            components of a blind or shade including slats, cords, and headrails.</p>
         <br>
 
         <!-- Here are reminders for the customer -->
