Added small changes to all files
Mostly footer was changed in aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
         <img src="images/WinstonSalemCrop.jpg" alt="Winston Salem" id="winston">
         <h1><strong>About us...</strong></h1>
         <!-- This paragraph is a brief explanation about the business -->
-        <p>Clean A Blind has been serving the Piedmont Triad area since 1997. We are based in
+        <p class="paragraphs">Clean A Blind has been serving the Piedmont Triad area since 1997. We are based in
             Lewisville, North Carolina. We pick up and deliver blinds to Winston Salem, Greensboro, High Point, and
             surrounding areas. Cleaning blinds isn't easy to do on your
             own. Here at Clean A Blind, we make it simple by using a professional ultrasonic blind cleaning machine to
@@ -39,23 +39,21 @@
 
         <!-- Here are reminders for the customer -->
         <h1><strong>Here are some reminders:</strong></h1>
-        <p>We will start providing a window cleaning service soon! This service will be optional but will be an
+        <p class="paragraphs">We will start providing a window cleaning service soon! This service will be optional but will be an
         option while getting your blinds cleaned at the same time. We are also partnered and provide blind
         cleaning services with Window Gang. If you are getting your windows cleaned with Window Gang, you can
         choose to get your blinds cleaned.</p>
 
         <!-- Contact information -->
         <h1><strong>Contact us:</strong></h1>
-        <p>Phone: 336-406-3649</p>
-        <p>E-mail: rsking6164@gmail.com</p><br>
+        <p class="paragraphs">Phone: 336-406-3649</p>
+        <p class="paragraphs">E-mail: rsking6164@gmail.com</p><br>
 
     </main>
 
     <footer>
         <hr>
         <p>© Clean A Blind 2018, All Rights Reserved</p>
-        <a href="https://validator.w3.org/check?uri=referer">Validate HTML</a>
-        <a href="https://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
     </footer>
 
 </div>
