Changed Clean A Blind logo link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </tr>
         </table>
 
-        <h1><strong><a href="https://webpages.uncc.edu/cking107/index.html">Clean A Blind</a></strong></h1>
+        <h1><strong><a href="index.html">Clean A Blind</a></strong></h1>
         <br>
     </header>
 
